Fixes value prop section on mobile

--- a/assets/sass/base/_root.scss
+++ b/assets/sass/base/_root.scss
@@ -348,6 +348,37 @@ section.testimonials {
     }
   }
 
+  section.value-prop {
+    flex-direction: column;
+    .left, .right {
+      width: calc(95%);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      padding-top: 4em;
+      padding-bottom: 2em;
+      @include box-shadow(0.225em, 0, 1.2em, 0, rgba($black, 0.08));
+
+      > * {
+        min-width: 85%;
+        width: 85%;
+      }
+    }
+
+    .left {
+      align-self: flex-start;
+      margin-bottom: 1.5em;
+      > * { margin-left: 2.5% }
+    }
+
+    .right {
+      align-self: flex-end;
+      > * { margin-right: 2.5% }
+    }
+  }
+
   section.faq {
     .column-wrapper { flex-direction: column; }
     .questions-column:first-of-type { margin-right: 0; }
